# rag-with-crewai-flow

./: .gitignore  README.md  pyproject.toml
src/rag_with_crewai_flow/: article_rag_flow.py  main.py
src/rag_with_crewai_flow/crews/core/: config.py  generate_embedding.py
src/rag_with_crewai_flow/crews/services/: bigquery_service.py  firebase_service.py
src/rag_with_crewai_flow/crews/websearch_crew/: websearch_crew.py
src/rag_with_crewai_flow/crews/websearch_crew/config/: agents.yaml  tasks.yaml
src/rag_with_crewai_flow/models/: articles.py
src/rag_with_crewai_flow/schemas/: articles.py
src/rag_with_crewai_flow/util/: util.py
